--- a/Haskell-2-1.ipynb
+++ b/Haskell-2-1.ipynb
@@ -4,25 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Haskell-1-2\n",
+    "## Haskell-2-1\n",
     "\n",
-    "https://www.youtube.com/watch?v=ybba5tcOeEY"
+    "https://www.youtube.com/watch?v=oQ4fvA1OEcY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sqDist x y = x^2 + y^2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "25"
+       "5.0"
       ]
      },
      "metadata": {},
@@ -38,12 +27,28 @@
     }
    ],
    "source": [
-    "sqDist 3 4"
+    "sq x = x * x\n",
+    "sqDist (x, y) = (sq x) + (sq y)\n",
+    "\n",
+    "dist pt = sqrt $ sqDist pt\n",
+    "\n",
+    "dist (4,3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dist = sqrt . sqrt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -132,29 +137,36 @@
        ".suggestion-name {\n",
        "font-weight: bold;\n",
        "}\n",
-       "</style><span class='get-type'>sqDist :: forall a. Num a => a -> a -> a</span>"
+       "</style><span class='get-type'>(.) :: forall b c a. (b -> c) -> (a -> b) -> a -> c</span>"
       ],
       "text/plain": [
-       "sqDist :: forall a. Num a => a -> a -> a"
+       "(.) :: forall b c a. (b -> c) -> (a -> b) -> a -> c"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {},
      "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
-    ":t sqDist\n",
-    ":i sqDist"
+    ":t (.)\n",
+    "-- (b -> c) -> (a -> b) -> (a -> c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "id :: a -> a\n",
+    "id x = x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -162,7 +174,7 @@
     {
      "data": {
       "text/plain": [
-       "\"25\""
+       "(2,1)"
       ]
      },
      "metadata": {},
@@ -170,19 +182,78 @@
     }
    ],
    "source": [
-    "print $ show $ sqDist 3 4"
+    "flop (a, b) = (b, a)\n",
+    "flop (1, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2,1)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "-- Implementation of \"Hello World!\" in Haskell\n",
-    "main = putStrLn \"Hello World!\""
+    "flop p = (snd p, fst p)\n",
+    "flop (1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sqDist :: Double -> Double -> Double\n",
+    "sqDist x y = x^2 + y^2\n",
+    "sqDistFromZero = sqDist 0\n",
+    "sqDistFromZero 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "-- notation not very convenient for partial application\n",
+    "-- this is not easy to curry\n",
+    "sqDist (x, y) = x^2 + y^2\n",
+    "sqDist (3, 4)"
    ]
   }
  ],
